# cjber.github.io

./: .gitignore  .nojekyll  .pre-commit-config.yaml  404.html  Makefile  _quarto.yml  about.html  about.qmd  index.html  index.qmd  index.xml  listings.json  pyproject.toml  references.bib  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml  readme.yml
about/: index.html
about-me/: index.html
categories/: index.html  index.xml
categories/blog/: index.html  index.xml
categories/portfolio/: index.html  index.xml
css/: core.min.2ee86b7ced04c224b7c251ca63671071f808388885e5ca295d2e204aa1fff028229c4d31049d4a36e7e9dacbf96ee902.css  core.min.3a2a5cc45dce87221cd6bc82dc4f926189560abef7b5a5533b169bbbcbde510e54798909ee31d87554ec626a0654b785.css  core.min.5bbca96083b71e4a8dfb11eb6f8729b248eae34431a91edf82d09c040ad645ea818adc2b296fb462166a0a5dee167d03.css  core.min.7955e4f175bbc5d0396adc4bfcef10f0fe69888e0acc654740ced659c2356684e4f930118831bb205e8388eba0adb368.css  core.min.96f60ddb835d4f87bf3c760dedd42ed7d4cd0c9cb2224f28021fccc3822e3d69c0d137ab739d9799fd856a2835b4a4e2.css  core.min.e9d41c6163ab76ebf9c1d79f3552be0861d1090eeffcacccd2e154e4db2c107f21f0690f7451f6a8d9c0ad1efbc600f8.css
cv/: .gitignore  cvcb.typ  cvcb.yml
page/1/: index.html
page/2/: index.html
post/: index.html  index.xml
post/abm_liv/: index.html
post/kindle/: index.html
post/managing_references/: index.html
post/maup_essay/: index.html
post/maup_mlm/: index.html
scripts/: base-pkgs.txt  base.ini  core.bu  core.ign  distrobox.ini  pkgs.txt
tags/: index.html  index.xml
(+112 files in other folders)
